@@ -22,8 +22,8 @@
 		<revision>0.0.1-SNAPSHOT</revision>
 		<project.build.outputTimestamp>1980-02-01T00:00:00Z</project.build.outputTimestamp>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>17</java.version>
-		<java.release>17</java.release>
+		<java.version>19</java.version>
+		<java.release>19</java.release>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<bnd.version>6.3.1</bnd.version>
@@ -121,8 +121,10 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.10.1</version>
 					<configuration>
+						<enablePreview>true</enablePreview>
 						<showWarnings>true</showWarnings>
 						<showDeprecation>true</showDeprecation>
+						<release>${java.release}</release>
 						<compilerArgs>
 							<arg>-Xlint:unchecked</arg>
 						</compilerArgs>
@@ -136,7 +138,11 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.22.2</version>
+					<version>3.0.0-M7</version>
+					<configuration>
+						<argLine>--enable-preview</argLine>
+					</configuration>
+
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
